# command-mcp

./: .cursorrules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  PLAN.md  README.md  SECURITY_AUDIT.md  justfile
docs/: architecture.md  configuration.md  deployment.md  development.md
examples/: README.md  aws_cli_config.toml  config.toml  docker_config.toml  echo_config.toml  just_config.toml  just_with_auth.toml  kubernetes_config.toml  podman_config.toml  unixtools_config.toml  vscode_mcp_config.json  vscode_mcp_config_examples.md  websocket_auth_config.toml
src/: config.rs  config_schema.rs  error.rs  executor.rs  lib.rs  main.rs  oidc.rs  server.rs  service.rs  tools.rs  transport.rs
tests/: example_configs_parse.rs  mcp_handshake.rs  stdio_end_to_end.rs  tool_execution.rs  websocket_end_to_end.rs
tests/common/: mod.rs
tests/integration/: mcp_handshake.rs  mod.rs  tool_execution.rs
