[package]
name = "genmcp"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.8", features = ["ws"] }
axum-extra = "0.12.5"
clap = { version = "4.5.54", features = ["derive", "env"] }
futures-util = "0.3.31"
jsonwebtoken = "10.2.0"
jwtk = "0.5"
nix = { version = "0.31", features = ["process", "signal"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }
rust-mcp-schema = "0.10"
rust-mcp-sdk = "0.9"
rust-mcp-transport = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1", features = ["derive"] }
tempfile = "3.24"
thiserror = "2.0.17"
tokio = { version = "1.49", features = ["full"] }
toml = "1"
tower-http = "0.6.8"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
tokio-tungstenite = "0.29"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
