[package]
name = "command-mcp"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
# Shared MCP core: JSON-RPC dispatch, stdio/websocket/unix transports, the Clap
# `serve` CLI, and (via the `auth` feature) websocket Bearer-token validation
# (HS256 secret / JWKS / OIDC discovery). The `auth` feature implies `websocket`.
mcp-core = { git = "https://github.com/adelie-ai/mcp-core", features = ["auth"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
nix = { version = "0.30.1", features = ["process", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8.22", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49", features = ["full"] }
toml = "0.9.11"

[dev-dependencies]
# Used by the websocket-auth integration test to mint HS256 tokens, by the
# stdio/websocket end-to-end tests for temp configs, and by the websocket client.
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto", "use_pem"] }
tempfile = "3.24"
tokio-tungstenite = "0.26"
futures-util = "0.3.31"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
